--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,3 +3,16 @@
 okchain1-docs-theme>=0.1
 sphinx-csv-filter
 Pygments==2.3.1
+
+restructuredtext-lint==1.3.0
+six==1.12.0
+snowballstemmer==2.0.0
+Sphinx==2.3.0
+sphinx-autobuild==0.7.1
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
