--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
 # packages for RTD to pick up (not used for local dev)
-crate-docs-theme>=0.7
+# crate-docs-theme>=0.7
+okchain1-docs-theme>=0.1
 sphinx-csv-filter
 Pygments==2.3.1
